--- a/JS - Day 1/bootstrap.html
+++ b/JS - Day 1/bootstrap.html
@@ -21,5 +21,21 @@
   <div class="alert alert-warning" role="alert">
     A simple success alert—check it out!
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-6 color-red">
+        Column
+      </div>
+      <div class="col-md-3 col-6 color-blue">
+        Column
+      </div>
+      <div class="col-md-3 col-6 color-green">
+        Column
+      </div>
+      <div class="col-md-3 col-6 color-yellow">
+        Column
+      </div>
+    </div>
+  </div>
 </body>
 </html>
