--- a/JS - Day 1/index.html
+++ b/JS - Day 1/index.html
@@ -6,8 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Day 1</title>
   <link rel="stylesheet" href="/style/index.css">
+  <script src="js/index.js"></script>
 </head>
 <body>
+  <style>
+    div {
+      background-color: red;
+    }
+  </style>
   <a href="/bootstrap.html">Bootstrap</a>
+  <div>
+    <h1>JS Datatypes</h1>
+    <ul>
+      <li>Numbers</li>
+      <li>String</li>
+      <li>Boolean</li>
+      <li>Null</li>
+      <li>Undefined</li>
+      <li>Object</li>
+    </ul>
+  </div>
+  <script>
+    function abc() {
+      console.log('abc called')
+    }
+    abc();
+  </script>
 </body>
 </html>
